# MCP-Bridge

./: .gitignore  CLAUDE.md  DUCKDUCKGO_INTEGRATION.md  Dockerfile  Makefile  README.md  compose.yml  config copy.json  docker-compose.duckduckgo.yml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
.omm/: config.yaml
.omm/overall-architecture/: concern.md  constraint.md  context.md  description.md  diagram.mmd  meta.yaml
.omm/request-lifecycle/: concern.md  constraint.md  context.md  description.md  diagram.mmd  meta.yaml
charts/mcp-bridge/: values.yaml
claude-mcp-bridge/: README-starrocks-metadata-mcp.md  mcp-bridge-knowledge-base.py  mcp-bridge-starrocks-lineage.py  mcp-bridge-starrocks-metadata.py
docs/: config.md  usecases.md
docs/plans/: 2025-01-26-duckduckgo-mcp-integration.md
duckduckgo_mcp_server/: Dockerfile  README.md  requirements.txt  server.py  test_server.py
mcp_bridge/: openapi_tags.py  routers.py
mcp_bridge/config/: final.py  initial.py
mcp_bridge/gateway/: __init__.py  tool_registry.py
mcp_bridge/gitnexus_webhook/: router.py
mcp_bridge/health/: __init__.py  manager.py  router.py  types.py
mcp_bridge/mcp_server/: server.py
tests/: QUICKREF.md  README.md  TESTING_SUMMARY.md  __init__.py  conftest.py  requirements.txt  run_tests.py  test_config_initial.py  test_duckduckgo_mcp.py  test_gateway_http_proxy.py  test_gateway_openai_tools.py  test_gateway_stream_chat_completion.py  test_gateway_tool_registry.py  test_gitnexus_webhook.py  test_mcp_bridge_api.py  test_openai_compatibility.py  test_run_tests.py  test_sse_bridge.py
(+54 files in other folders)
